--- a/index.css
+++ b/index.css
@@ -4,4 +4,200 @@
     --grey: hsl(231, 7%, 60%);
     --white:  hsl(0, 0%, 100%);
     --tomato: hsl(4, 100%, 67%);
+    --otomato: hsla(4, 100%, 67%, 0.171);
+    --ptomato: rgba(230, 73, 110); 
+}
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+main {
+    min-height: 100vh;
+    min-height: 100dvh;
+    height: 100vh;
+}
+.container {
+    display: flex;
+    overflow: hidden;
+}
+.firstForm {
+    flex-shrink: 0;
+    width: 100vw;
+}
+.card1 {
+    width: 100%;
+}
+.mobileImg {
+    height: 100%;
+    width: 100%;
+}
+.deskImg {
+    display: none;
+}
+.card2 {
+    margin: 1.25rem 1.875rem;
+}
+.header {
+    font-size: 2.1875rem;
+    font-weight: 700;
+    line-height: 1.875rem;
+    color: var(--darkGrey)
+}
+p, li {
+    color: var(--charcoalGrey);
+}
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+li {
+    position: relative;
+    padding: 0.9375rem 2.1875rem;
+}
+li::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0.825rem;
+    background-image: url("/assets/images/icon-list.svg");
+    background-repeat: no-repeat;
+    display: inline-block;
+    height: 1.4375rem;
+    width: 1.4375rem;
+}
+.java {
+    display: flex;
+    justify-content: space-between;
+    font-size: 0.8125rem;
+    font-weight: 700;
+}
+[for="mail"] {
+    color: var(--darkGrey);
+}
+#errMessage {
+    color: var(--tomato);
+    transition: 0.5s;
+}
+[type="text"] {
+    border-radius: 0.3125rem;
+    padding: 0.9375rem 1.25rem;
+    border: 0.0625rem solid var(--grey);
+    outline: none;
+    width: 100%;
+    box-sizing: border-box;
+    margin-block-end: 1.25rem;
+    margin-block-start: 0.3125rem;
+    transition: 0.5s;
+}
+.bold {
+    font-weight: 700;
+}
+[type="text"].err {
+    border: 0.0615rem solid var(--tomato);
+    color: var(--tomato);
+    background: var(--otomato);
+}
+[type="text"].err:focus {
+    border: 0.0615rem solid var(--tomato);
+}
+[type="text"]:focus {
+    border: 0.0615rem solid var(--darkGrey);
+}
+[type="text"].err::placeholder {
+    color: var(--tomato);
+}
+[type="button"] {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 0.9375rem 1.25rem;
+    background: var(--darkGrey);
+    color: var(--white);
+    border: none;
+    border-radius: 0.3125rem;
+    transition: 0.5s;
+}
+[type="button"]:focus,
+[type="button"]:hover {
+    background-image: linear-gradient(to left, var(--tomato), var(--ptomato));
+    box-shadow: 0 0.625rem 1.875rem 0 var(--tomato);
+    cursor: pointer;
+}
+.attribution { 
+    font-size: 0.6875rem; 
+    text-align: center; 
+    display: none;
+}
+.attribution a { 
+    color: hsl(228, 45%, 44%); 
+}
+.activeForm {
+    flex-shrink: 0;
+    width: 100vw;
+    height: 100vh;
+    padding: 0.625rem 1.875rem;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+.activeImg {
+    height: 60px;
+}
+
+@media (width >= 1440px) {
+    main {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: var(--charcoalGrey);
+    }
+    .container {
+        width: min(60%, 864px);
+        height: min(80%, 560px);
+        background: var(--white);
+        border-radius: 1.25rem;
+        box-shadow: 0 1.25rem 1.875rem 0 var(--darkGrey);
+        overflow: hidden;
+    }
+    .container.small {
+        width: min(30%, 432px);
+        height: min(60%, 420px);
+    }
+    .firstForm {
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        justify-content: space-around;
+        width: 100%;
+        padding: 0.625rem 1.25rem;
+        box-sizing: border-box;
+    }
+    .mobileImg {
+        display: none;
+    }
+    .deskImg {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        transition: transform 0.5s;
+    }
+    .card1 {
+        box-sizing: border-box;
+        flex: 45%;
+        height: 95%;
+        overflow: hidden;
+    }
+    .card2 {
+        box-sizing: border-box;
+        flex: 55%;
+        padding: 0 1.875rem;
+    }
+    .activeForm {
+        height: 100%;
+        width: 100%;
+        padding: 30px 50px;
+    }
+ 
 }
