--- a/index.css
+++ b/index.css
@@ -145,7 +145,7 @@ li::before {
     height: 60px;
 }
 
-@media (width >= 1440px) {
+@media screen and (min-width: 1440px) {
     main {
         display: flex;
         align-items: center;
