--- a/index.css
+++ b/index.css
@@ -12,11 +12,6 @@ body {
     padding: 0;
     box-sizing: border-box;
 }
-main {
-    min-height: 100vh;
-    min-height: 100dvh;
-    height: 100vh;
-}
 .container {
     display: flex;
     overflow-x: hidden;
@@ -36,7 +31,7 @@ main {
     display: none;
 }
 .card2 {
-    margin: 1.25rem 1.875rem;
+    padding: 1.25rem 1.875rem 3rem 1.875rem;
 }
 .header {
     font-size: 2.1875rem;
@@ -65,6 +60,7 @@ li::before {
     display: inline-block;
     height: 1.4375rem;
     width: 1.4375rem;
+    background-position: contain;
 }
 .java {
     display: flex;
@@ -124,12 +120,13 @@ li::before {
     cursor: pointer;
 }
 .attribution { 
-    font-size: 0.6875rem; 
+    font-size: 0.8875rem; 
     text-align: center; 
-    display: none;
+    color: var(--darkGrey);
 }
 .attribution a { 
-    color: hsl(228, 45%, 44%); 
+    color: var(--tomato); 
+    text-decoration-color: var(--darkGrey);
 }
 .activeForm {
     flex-shrink: 0;
@@ -145,9 +142,11 @@ li::before {
     height: 60px;
 }
 
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1000px) {
     main {
         display: flex;
+        flex-direction: column;
+        gap: 30px;
         align-items: center;
         justify-content: center;
         background: var(--charcoalGrey);
@@ -199,5 +198,11 @@ li::before {
         width: 100%;
         padding: 30px 50px;
     }
- 
+    .attribution { 
+        color: var(--tomato);
+    }
+    .attribution a { 
+        color: var(--white); 
+        text-decoration-color: var(--tomato);
+    }
 }
